# cats

./: pyproject.toml
cats/gears/: config.py  log.py
config/: local.yaml
