[tool.poetry]
name = "cats"
version = "0.1.0"
description = ""
authors = ["shotowon <sanzhar.maratov@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
